--- a/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/src/components/Burger/BuildControls/BuildControls.module.css
@@ -11,3 +11,47 @@
     box-shadow: 0 2px 1px #ccc;
     background-color: #CF8F2E;
 }
+
+.OrderButton {
+    border: 1px solid #966909;
+    padding: 15px 30px;
+    outline: none;
+    
+    cursor: pointer;
+    background-color: #DAD735;
+    box-shadow: 2px 2px 2px #966909;
+    
+    font-family: inherit;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    color: #966909;
+}
+
+.OrderButton:hover, .OrderButton:active {
+    background-color: #A0DB41;
+    border: 1px solid #966909;
+    color: #966909;
+}
+
+.OrderButton:disabled {
+    background-color: #C7C6C6;
+    cursor: not-allowed;
+    border: 1px solid #ccc;
+    color: #888888;
+}
+
+.OrderButton:not(:disabled) {
+    animation: enable 0.3s linear;
+}
+
+@keyframes enable {
+    0% {
+        transform: scale(1);
+    }
+    60% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
