--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -3,7 +3,7 @@
     height: 250px;
     margin: auto;
 
-    overflow: scroll;
+    overflow-y: scroll;
 
     text-align: center;
     font-size: 1.2rem;
