completed basic routing, orders page and order workflow + backend integration

--- a/src/components/Order/CheckoutSummary/Checkout.module.css
+++ b/src/components/Order/CheckoutSummary/Checkout.module.css
@@ -10,6 +10,12 @@
     }
 }
 
+@media (min-width: 800px) {
+    .CheckoutSummary {
+        width: 700px;
+    }
+}
+
 .Burger {
     width: 100%;
     margin: auto;
