--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,6 +1,6 @@
 .Burger {
     width: 100%;
-    height: 250px;
+    /* height: 250px; */
     margin: auto;
 
     overflow-y: scroll;
@@ -26,7 +26,7 @@
 
 @media (min-width: 1000px) and (min-height: 700px) {
     .Burger {
-        width: 700px;
+        /* width: 700px; */
         height: 600px;
     }
 }
